# vibede

./: next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.cursor/rules/: tauri-rules.mdc
docs/: auth.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: auth.json  default.json  file_system.json  network.json  shell.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_commands.rs  auth_commands.rs  dialog_commands.rs  file_analysis_commands.rs  file_watcher_commands.rs  mod.rs
src-tauri/src/resources/: success.html
src-tauri/src/services/: agent_service.rs  auth_service.rs  file_service.rs  file_watcher_service.rs  mod.rs
src-tauri/src/utils/: mod.rs  panic_handler.rs
src/app/: layout.tsx  page.tsx
src/app/agents/: page.tsx
src/app/components/: directory-selector.tsx  file-explorer.tsx  folder-selector.tsx
src/app/file-watcher/: page.tsx
src/app/settings/: page.tsx
src/components/: BaseDirectorySetting.tsx  DirectorySelector.tsx  FileList.tsx  FileWatcher.tsx  LanguageDetection.tsx  ProjectSelector.tsx  TestFileAnalysis.tsx  TestGenerationResults.tsx
src/components/FileWatcherFilters/: FilterStatus.tsx  FilterToggles.tsx  index.ts
src/components/auth/: AuthButton.tsx  AuthProvider.tsx  AuthProviderWrapper.tsx  (+1 more)
src/hooks/: useAnalysisState.ts  useAuth.ts  useFileFilters.ts  useFileWatcher.ts  useLanguageState.ts  useProjectState.ts  useTestGenerationState.ts
src/lib/: agent-utils.ts  auth0-config.ts  utils.ts
src/types/: fileWatcher.ts  global.d.ts  tauri.d.ts
(+11 files in other folders)
