[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = { version = "2.0.0-rc", features = ["colored"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.0.0"
notify = "6.1.1"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
# Auth0 dependencies
url = "2.4.1"
urlencoding = "2.1.3"
rand = "0.8.5"
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = ["alloc"] }
base64 = "0.21.7"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls", "blocking"] }
tauri-plugin-deep-link = "2.0.0"
# LangChain for Rust integration
langchain-rust = "4.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
